RESOLVED FIXED309641
REGRESSION (308835@main): Nullptr deref in MediaSessionManagerCocoa::updateNowPlayingSuppression
https://bugs.webkit.org/show_bug.cgi?id=309641
Summary REGRESSION (308835@main): Nullptr deref in MediaSessionManagerCocoa::updateNo...
Andy Estes
Reported 2026-03-10 20:19:36 PDT
SSIA
Attachments
Andy Estes
Comment 1 2026-03-10 20:19:38 PDT
Andy Estes
Comment 2 2026-03-10 20:20:35 PDT
EWS
Comment 3 2026-03-10 20:58:07 PDT
Committed 309028@main (b87e332417e6): <https://commits.webkit.org/309028@main> Reviewed commits have been landed. Closing PR #60333 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.