REGRESSION (308835@main): Nullptr deref in MediaSessionManagerCocoa::updateNowPlayingSuppression https://bugs.webkit.org/show_bug.cgi?id=309641 rdar://172231198

Reviewed by Wenson Hsieh.

Null-checked nowPlayingInfo before dereferencing it.

* Source/WebCore/platform/audio/cocoa/MediaSessionManagerCocoa.mm:
(WebCore::MediaSessionManagerCocoa::updateNowPlayingSuppression):

Canonical link: https://commits.webkit.org/309028@main